--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,5 @@
 {
-    "directory": "app/bower_components"
+    "directory": "app/bower_components",
+    "proxy": "http://proxy.hacienda.mendoza.gov.ar:8080",
+    "https-proxy": "http://proxy.hacienda.mendoza.gov.ar:8080"
 }
