--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-socket-io": "~0.6.0",
     "angular": "~1.2.16",
     "foundation": "~5.2.2",
-    "socket.io-client": "~0.9.16"
+    "socket.io-client": "~0.9.16",
+    "bootstrap": "~3.1.1"
   }
 }
